# uos-msp430

./: .gitignore  CMakeLists.txt  README.md  a.hex  a.out  blink.cpp  blink2.cpp  msp430-cmake  msp430.cmake  spi.cpp
example/: CMakeLists.txt
example/reflow-controller/: CMakeLists.txt  main.cpp  max6675.hpp  old_spi.hpp
example/stable-sensor/: CMakeLists.txt  main copy.cpp  main.cpp
include/uos/: basic_scheduler.hpp  pin2.hpp  scheduler.hpp  task_list.hpp  thread.hpp  timer.hpp  uca1.hpp
include/uos/detail/: autoselect.hpp  buffer_sequence.hpp  task_list.hpp
include/uos/device/: cmt2300a.hpp  hdc1080.hpp  tm1628a.hpp
include/uos/device/msp430/: eusci.hpp  gpio.hpp  port2.hpp  scheduler.hpp  task_list.hpp  timer_a.hpp  timer_a0.hpp
src/: CMakeLists.txt  main.cpp  old_spi.hpp  scheduler.cpp  spi.cpp  thread.cpp  thread.s  timer.cpp
src/uos/: CMakeLists.txt  pin2.cpp  scheduler.cpp  timer.cpp  uca1.cpp
src/uos/device/: CMakeLists.txt
src/uos/device/msp430/: CMakeLists.txt  eusci.cpp  gpio.cpp  scheduler.cpp  scheduler.s  scheduler_large.s  timer_a.cpp  timer_a0.cpp
test/: CMakeLists.txt  basic_scheduler.cpp
test/detail/: CMakeLists.txt  autoselect.cpp  task_list.cpp
test/device/: CMakeLists.txt
test/device/msp430/: CMakeLists.txt  test_scheduler.hpp  timer_a.cpp
